apps/ride/base/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ride-service
  template:
    metadata:
      labels:
        app: ride-service
    spec:
      containers:
      - name: ride-service
        image: docker.io/ama2352/ride-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 8082
        startupProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          failureThreshold: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: 256m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ride-service
  namespace: default
  labels:
    app: ride-service
spec:
  type: ClusterIP
  selector:
    app: ride-service
  ports:
  - name: metrics
    port: 80
    targetPort: metrics
